# belka

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
belka/: eda.py
docs/: installation.md
installation/: index.html
notebooks/ecfp/: ecfp.ipynb  leash-tutorial-ecfps-and-random-forest.ipynb
notebooks/mol_representation/: belka-molecule-representations-for-ml-tutorial.ipynb  mol_plots.ipynb
notebooks/shrink_dataset/: belka-shrinking-the-dataset.ipynb
search/: search_index.json
tests/: test_main.py
