[tool.poetry]
name = "belka"
version = "0.1.0"
description = "Submission to the BELKA Kaggle challenge (2024)"
authors = ["LouisStefanuto <louis.stefanuto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "^2.12.1"
typer = "^0.12.3"
dgl = "^2.1.0"
rdkit-pypi = "^2022.9.5"
mol2vec = "^0.2.2"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
transformers = "^4.40.0"
polars = "^0.20.22"
pydantic = "^2.7.1"
torch = "2.2.1"
scipy = "1.12"
duckdb = "^0.10.2"
tqdm = "^4.66.2"
xgboost = "^2.0.3"
mapply = "^0.1.25"
ipywidgets = "^8.1.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
pytest = "^8.1.1"
isort = "^5.13.2"
pytest-cov = "^5.0.0"
ipykernel = "^6.29.4"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
